--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/mentalhealth
-spring.datasource.username=maram_mustafa
+spring.datasource.username=ibrahim
 spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
