finished chat feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=ayyoub
 spring.datasource.password=lplp1010
 spring.jpa.hibernate.ddl-auto=update
 spring.mvc.hiddenmethod.filter.enabled=true
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+
