--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/mentalhealth
-spring.datasource.username=aseeldweedar
-spring.datasource.password=123456
+spring.datasource.username=ayyoub
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
